--- a/index.html
+++ b/index.html
@@ -8,20 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section> 
-    <!-- <header> -->
-        <img src="" alt="Header Logo">
-        <nav>
-            <ul>header link 1</ul>
-            <ul>header link 2</ul>
-            <ul>header link 3</ul>
-        </nav>
-   <!-- </header> -->
+   <section class="section1"> 
+    <a href="#title-section"> <img class="header-logo" src="" alt=""></a>
+    <header class="links">
+        <ul class="nav-links">
+            <li><a href="#link1">Header link one</a></li>
+            <li><a href="#link2">Header link two</a></li>
+            <li><a href="#link3">Header link three</a></li>
+        </ul>
 
-   <h1>This is an awesome website</h1>
-   <span>This website has some context about how to be the coolest person on earth</span>
-   <button>Sign Up</button>
-   <img src="#" alt="A picture for what the website is.">
+    </header>
+        <h1>This is an awesome website</h1>
+        <span>This website has some context about how to be the coolest person on earth</span>
+        <button>Sign Up</button>
+        <img src="#" alt="A picture for what the website is.">
+   </section>
+
+   <section class="section2">
+    <div class="worker-container">
+        <div class="worker">
+            <img class="worker-icon" src="#" alt="">
+            <h2>this is some subtext</h2>
+        </div>
+        <div class="worker">
+            <img class="worker-icon" src="#" alt="">
+            <h2>this is some subtext</h2>
+        </div>
+        <div class="worker">
+            <img class="worker-icon" src="#" alt="">
+            <h2>this is some subtext</h2>
+        </div>
+        <div class="worker">
+            <img class="worker-icon" src="#" alt="">
+            <h2>this is some subtext</h2>
+        </div>
+   </section>
+
+   <section class="section3">
+    <span> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</span>
    </section>
     
 </body>
