--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section class="section1"> 
+   <nav class="navbar"> 
     <a href="#title-section"> <img class="header-logo" src="" alt=""></a>
-    <header class="links">
         <ul class="nav-links">
             <li><a href="#link1">Header link one</a></li>
             <li><a href="#link2">Header link two</a></li>
             <li><a href="#link3">Header link three</a></li>
         </ul>
-
-    </header>
+    </nav>
+    <section class="section1">
         <h1>This is an awesome website</h1>
         <span>This website has some context about how to be the coolest person on earth</span>
         <button>Sign Up</button>
